Contact icons and text in contact section appearance on mobile phones fixed

--- a/css/style.css
+++ b/css/style.css
@@ -82,3 +82,11 @@ ins:hover, ins:active {
     margin-top: 7px;
 
 }
+
+.contact-text{
+
+    text-align: justify;
+    overflow: hidden;
+    white-space: nowrap;
+
+}
